# internal/models/user.go
@@ -7,20 +7,22 @@ import (
 )
 
 type User struct {
-	ID        uuid.UUID `json:"id" gorm:"type:uuid;primary_key;default:gen_random_uuid()"`
-	Username  string    `json:"username" gorm:"type:varchar(20);uniqueIndex;not null"`
-	Name      string    `json:"name" gorm:"type:varchar(100);not null"`
+	UUID      uuid.UUID `json:"uuid" gorm:"type:uuid;primary_key;default:gen_random_uuid()"`
+	ID        string    `json:"id" gorm:"type:varchar(20);uniqueIndex;not null"`
+	Nickname  string    `json:"nickname" gorm:"type:varchar(100);not null"`
 	Password  string    `json:"-" gorm:"type:varchar(255);not null"`
 	CreatedAt time.Time `json:"created_at" gorm:"autoCreateTime"`
 	UpdatedAt time.Time `json:"updated_at" gorm:"autoUpdateTime"`
 }
 
-func NewUser(username, password string) *User {
+func NewUser(id, nickname, password string) *User {
+	now := time.Now()
 	return &User{
-		ID:        uuid.New(),
-		Username:  username,
+		UUID:      uuid.New(),
+		ID:        id,
+		Nickname:  nickname,
 		Password:  password,
-		CreatedAt: time.Now(),
-		UpdatedAt: time.Now(),
+		CreatedAt: now,
+		UpdatedAt: now,
 	}
 }
